<resources>
    <string name="app_name">Reto2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="action_add">Agregar</string>

    <string name="menu_home">Inicio</string>
    <string name="menu_productos">Productos</string>
    <string name="menu_servicios">Servicios</string>
    <string name="menu_sucursales">Sucursales</string>
    <!-- TODO: Remove or change this placeholder text -->


    <!-- Productos -->
    <string name="nameP1">Comida</string>
    <string name="descriptionP1">Comidas de todo tipo</string>
    <string name="precioP1">$50\'000.000</string>

    <!-- Eventos-->
    <string name="nameP2">Eventos</string>
    <string name="descriptionP2">Bautizos,matrimonios</string>
    <string name="precioP2">$30\'000.000</string>

    <!-- Conciertos-->
    <string name="nameP3">Conciertos</string>
    <string name="descriptionP3">Mariachi,tradicional,trios</string>
    <string name="precioP3">$100\'000.000</string>


    <!-- Casa1-->
    <string name="nameC1">El bosque</string>
    <string name="descriptionC1">Casa en el bosque</string>
    <string name="precioC1">$50\'000.000</string>

    <!-- Casa2-->
    <string name="nameC2">La cabaña</string>
    <string name="descriptionC2">Hermosas cabañas</string>
    <string name="precioC2">$30\'000.000</string>

    <!-- Casa3-->
    <string name="nameC3">El lago</string>
    <string name="descriptionC3">Tranquilidad siempre</string>
    <string name="precioC3">$100\'000.000</string>

    <!-- Evento1-->
    <string name="nameE1">Organización Eventos</string>
    <string name="descriptionE1">Casa en el bosque</string>
    <string name="descriptionEe1">Tel: 32456798</string>

    <!-- Evento2-->
    <string name="nameE2">Domicilios</string>
    <string name="descriptionE2">Domicilios en toda la ciudad</string>
    <string name="descriptionEe2">Tel: 32098754322</string>

    <!-- Evento3-->
    <string name="nameE3">Call Center</string>
    <string name="descriptionE3">Lineas de atención: </string>
    <string name="descriptionEe3">Tel:3224555555</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>