<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.productos.ProductosFragment">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!--    Codigo Caja 1-->

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8AB4B"
        android:fontFamily="@font/indie"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="Productos" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgP1"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:src="@drawable/comida" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameP1"
                android:fontFamily="@font/indie"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#FF000000"/>

            <TextView
                android:id="@+id/tvDescriptionP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionP1"
                android:fontFamily="@font/garamondi"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvPriceP1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precioP1"
                android:fontFamily="@font/garamondi"
                android:textSize="14sp"/>

        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8AB4B"
        android:fontFamily="@font/indie"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="Eventos" />

    <!--    Codigo Caja 2-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="25dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imgP2"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:src="@drawable/conciertos" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameP2"
                android:fontFamily="@font/indie"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#FF000000"/>

            <TextView
                android:id="@+id/tvDescriptionP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionP2"
                android:fontFamily="@font/garamondi"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvPriceP2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precioP2"
                android:fontFamily="@font/garamondi"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>
    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F8AB4B"
        android:fontFamily="@font/indie"
        android:textAlignment="center"
        android:textColor="#FF000000"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="Música" />

    <!--    Codigo Caja 3-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="25dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgP3"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_weight="1"
            android:paddingLeft="25dp"
            android:src="@drawable/eventos1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvNameP3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nameP3"
                android:fontFamily="@font/indie"
                android:textSize="26sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="#FF000000"/>

            <TextView
                android:id="@+id/tvDescriptionP3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/descriptionP3"
                android:fontFamily="@font/garamondi"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/tvPriceP3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/precioP3"
                android:fontFamily="@font/garamondi"
                android:textSize="14sp"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>


</ScrollView>



</LinearLayout>