<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sucursales.SucursalesFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F8AB4B"
                android:fontFamily="@font/indie"
                android:textAlignment="center"
                android:textColor="#FF000000"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="Sede El Bosque" />
            <!--    Codigo Caja 1-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgP1"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:src="@drawable/casa1" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameP1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameC1"
                        android:fontFamily="@font/indie"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="#FF000000"/>

                    <TextView
                        android:id="@+id/tvDescriptionP1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/garamondi"
                        android:textSize="14sp"
                        android:text="@string/descriptionC1" />

                    <TextView
                        android:id="@+id/tvPriceP1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/garamondi"
                        android:textSize="14sp"
                        android:text="@string/precioC1" />
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/textView12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F8AB4B"
                android:fontFamily="@font/indie"
                android:textAlignment="center"
                android:textColor="#FF000000"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="Sede La Cabañas" />

            <!--    Codigo Caja 2-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgP2"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:paddingLeft="20dp"
                    android:src="@drawable/casa2" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameP2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameC2"
                        android:fontFamily="@font/indie"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="#FF000000"/>

                    <TextView
                        android:id="@+id/tvDescriptionP2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionC2"
                        android:fontFamily="@font/garamondi"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvPriceP2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precioC2"
                        android:fontFamily="@font/garamondi"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#F8AB4B"
                android:fontFamily="@font/indie"
                android:textAlignment="center"
                android:textColor="#FF000000"
                android:textSize="26sp"
                android:textStyle="bold"
                android:text="Sede El Lago" />

            <!--    Codigo Caja 3-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="25dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imgP3"
                    android:layout_width="180dp"
                    android:layout_height="180dp"
                    android:layout_weight="1"
                    android:paddingLeft="25dp"
                    android:src="@drawable/casa3" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvNameP3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nameC3"
                        android:fontFamily="@font/indie"
                        android:textSize="26sp"
                        android:textStyle="bold"
                        android:textAlignment="center"
                        android:textColor="#FF000000"/>

                    <TextView
                        android:id="@+id/tvDescriptionP3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/descriptionC3"
                        android:fontFamily="@font/garamondi"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tvPriceP3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/precioC3"
                        android:fontFamily="@font/garamondi"
                        android:textSize="14sp"/>
                </LinearLayout>
            </LinearLayout>


        </LinearLayout>


    </ScrollView>


</LinearLayout>